force-app/main/default/objects/Principal__c/Principal__c.object-meta.xml
<CustomObject>
    <label>Principal</label>
    <nameField>
        <label>Principal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Principals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>