force-app/main/default/objects/Principal__c/fields/Current_Employment__c.field-meta.xml
<CustomField>
    <fullName>Current_Employment__c</fullName>
    <formula>IF(
ISPICKVAL(Employment_Status__c,&quot;Active&quot;),
&quot;Currently Working&quot;,
&quot;Inactive&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Employment</label>
    <type>Text</type>
</CustomField>