force-app/main/default/objects/Principal__c/fields/Faculty_Category__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Category__c</fullName>
    <label>Faculty Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>