force-app/main/default/objects/Principal__c/fields/Principal_ID__c.field-meta.xml
<CustomField>
    <fullName>Principal_ID__c</fullName>
    <displayFormat>PR-{0000}</displayFormat>
    <label>Principal ID</label>
    <type>AutoNumber</type>
</CustomField>