force-app/main/default/objects/Principal__c/fields/Total_Service__c.field-meta.xml
<CustomField>
    <fullName>Total_Service__c</fullName>
    <formula>FLOOR(
(TODAY()-Joining_Date__c)/365
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>