force-app/main/default/objects/Principal__c/validationRules/DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB</fullName>
    <active>true</active>
    <errorConditionFormula>DOB__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Date of Birth cannot be a future date.</errorMessage>
</ValidationRule>