force-app/main/default/objects/Principal__c/validationRules/Joining_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Joining_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Joining_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Joining Date cannot be a future date.</errorMessage>
</ValidationRule>