force-app/main/default/objects/Principal__c/validationRules/Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
REGEX(
Mobile_Number__c,
&quot;^[6-9][0-9]{9}$&quot;
)
)</errorConditionFormula>
    <errorMessage>Enter a valid 10-digit mobile number starting with 6, 7, 8, or 9.</errorMessage>
</ValidationRule>