force-app/main/default/objects/Principal__c/validationRules/Official_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Official_Email</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
CONTAINS(
Email__c,
&quot;@college.edu&quot;
)
)</errorConditionFormula>
    <errorMessage>Please enter a valid official college email ending with @college.edu.</errorMessage>
</ValidationRule>