force-app/main/default/objects/Principal__c/validationRules/Principal_Experience.validationRule-meta.xml
<ValidationRule>
    <fullName>Principal_Experience</fullName>
    <active>true</active>
    <errorConditionFormula>Experience__c &lt; 10</errorConditionFormula>
    <errorMessage>Principal must have at least 10 years of experience.</errorMessage>
</ValidationRule>